fixat en del buggar. Behöver testas mer

--- a/fplan/extract/notam_sample2.html
+++ b/fplan/extract/notam_sample2.html
@@ -793,6 +793,12 @@ ESMX/VAXJO/KRONOBERG
 +   AERODROME CONTROL TOWER (TWR) HOURS OF OPS/SERVICE
     13 JUN 0915-1315, 1345-1945.
     12JUN10 0000 - 13JUN10 2359 (ES/1/B1654/10)
+    
++   TEST TEST NEW RESTRICTION AREA TEST TEST
+    554937N 0133636E - 553500N 0133850E - 552620N 0134720E - 550715N 0134720E - 
+    550540N 0125958E - 551458N 0125956E - 554358N 0130656E - 554857N 0130636E - 
+    554937N 0133636E 
+    EXCERCISE FICTIONAL NAVY
 
     AERODROME CONTROL TOWER (TWR) HOURS OF OPS/SERVICE
     19 JUN 0630-1000, 1530-1830
