speeded up gps track upload, immediate update of flight time when changing TAS on the overview screen, allow entering start fuel

--- a/fplan/extract/notam_sample4.html
+++ b/fplan/extract/notam_sample4.html
@@ -696,7 +696,7 @@ ESKN/STOCKHOLM/SKAVSTA
     31MAY10 1509 - 31JUL10 1500EST (ES/1/B1584/10)
 
     TWY EDGE LIGHTS  A, B AND C OPERATING WITHOUT MONITORING.
-    31MAY10 1510 - 31JUL10 1500EST (ES/1/B1585/10)
+    31MAY10 1510 - 31JUL10 1500EST (ES/1/B1585/10)1
 
     PAPI RWY 34 OUT OF SERVICE.
     02JUN10 0707 - 31JUL10 1500EST (ES/1/B1626/10)
@@ -706,6 +706,31 @@ ESKN/STOCKHOLM/SKAVSTA
 
     STANDARD PROCEDURES FOR NOISE ABATEMENT (NADP 1) SHALL BE USED.
     26MAR10 1234 - 31AUG10 2359EST (ES/1/B0780/10)
+    DAILY 0500-1600 ACFT WITH MTOW EXCEEDING 7 TONNES PERFORMING
+    VISUAL APROACH MUST NOT DESCENT BELOW 2000FT MSL BEFORE
+    ESTABLISHED ON RWY CENTERLINE.
+    DAILY 1600-0500 VISUAL APCH NOT PERMITTED FOR ACFT WITH MTOW
+    EXCEEDING 7 TONNES.
+    22JUL10 0959 - PERM (ES/1/B2304/10)
+
+    VISUAL APCH NOT PERMITTED WI FOLLOWING AREAS
+    STIGTOMTA
+
+
+                                               CONTINUES ON NEXT PAGE
+
+AIS FIR INFORMATION           ISSUED 100819 1736   SFI050 PAGE 13(24)
+
+    584957N0164459E 585018N0164624E 585016N0164836E 584909N0164927E
+    584744N0164824E 584740N0164633E 584808N0164529E 584957N0164459E
+    JONAKER-NYKOPING-OXELOSUND
+    584611N0164031E 584406N0164013E 583747N0165647E 583829N0171100E
+    584738N0170649E 584611N0164031E
+    TYSTBERGA
+    585149N0171322E 585149N0171518E 585110N0171603E 585027N0171535E
+    585021N0171402E 585106N0171233E 585149N0171322E.
+    26JUL10 0931 - PERM (ES/1/B2322/10)
+    
 
 ESME/ESLOV
     THR LIGHTS RWY 15/33 OUT OF SERVICE.
