--- a/fplan/extract/notam_sample4.html
+++ b/fplan/extract/notam_sample4.html
@@ -79,6 +79,14 @@ ESAA/FIR SWEDEN
     REF AIP PAGE ENR 3-3-25 DATED 19 NOV 2009.
     06MAY10 0000 - PERM (ES/1/A0137/10)
 
+    RESTRICTED AREA ESTABLISHED DUE GLIDER FLYING WI 20 NM RADIUS
+    FM 654822N 0150458E, HEMAVAN AD, NORWEGIAN TERRITORY EXCLUDED.
+    PERMISSION TO CROSS FROM STOCKHOLM ACC
+    ACC WILL PERMIT CROSSING OF AREA BETWEEN 5000 FT AMSL AND FL95,
+    MAINTAINING VMC. 5000FT AMSL-FL195.
+    13SEP10 0000 - 26SEP10 2359 (ES/1/C1160/10)
+
+
     STOCKHOLM TMA LIMITED. ALL AERIAL PHOTOGRAPHY AND SIMILAR
     FLIGHTS WITHIN STOCKHOLM TMA MUST BE COORDINATED WITH THE
     TACTICAL SUPERVISOR BEFORE DEPARTURE. PLEASE USE PHONE NUMBER
