--- a/fplan/extract/notam_sample5.html
+++ b/fplan/extract/notam_sample5.html
@@ -67,6 +67,13 @@ ESAA/FIR SWEDEN
     REF AIP PAGE ENR 3-3-50 DATED 8 APR 2010 FL285-FL460.
     06MAY10 0000 - PERM (ES/1/A0131/10)
 
+    RESTRICTED AREA ESTABLISHED DUE GLIDER FLYING WI 20 NM RADIUS
+    FM 654822N 0150458E, HEMAVAN AD, NORWEGIAN TERRITORY EXCLUDED.
+    PERMISSION TO CROSS FROM STOCKHOLM ACC
+    ACC WILL PERMIT CROSSING OF AREA BETWEEN 5000 FT AMSL AND FL95,
+    MAINTAINING VMC. 5000FT AMSL-FL195.
+    13SEP10 0000 - 26SEP10 2359 (ES/1/C1160/10)
+
     RNAV RTE UM869 FL285-FL460 CHANGE OF AVAILABILITY AS FLW:
     CDR 1 H24 SEGMENT VEDEN-IBREK. ALTN: RADARVECTORING ON ATC
     INSTRUCTION. ROUTE EXTENSION: MAX 20 NM.
