notam parser update

--- a/fplan/extract/notam_sample.html
+++ b/fplan/extract/notam_sample.html
@@ -77,6 +77,11 @@ ESAA/FIR SWEDEN
 
     STOCKHOLM TMA LIMITED. ALL AERIAL PHOTOGRAPHY AND SIMILAR
     FLIGHTS WITHIN STOCKHOLM TMA MUST BE COORDINATED WITH THE
+
+                                               CONTINUES ON NEXT PAGE
+
+AIS FIR INFORMATION           ISSUED 100610 1738   SFI008 PAGE 2(25)
+
     TACTICAL SUPERVISOR BEFORE DEPARTURE. PLEASE USE PHONE NUMBER
     +46 8 585 547 02. REF ES AIP AD2 ESSA AD 2.23.
     18MAY10 0000 - 31OCT10 2359 (ES/1/B1401/10)
