better notam parsing of boilerplate stuff

--- a/fplan/extract/notam_sample6.html
+++ b/fplan/extract/notam_sample6.html
@@ -79,6 +79,8 @@ ESAA/FIR SWEDEN
     0180334E STOCKHOLM UNIVERSITY SHOULD BE AVOIDED BELOW 1800 FT
     MSL DUE OPERATION OF LASER EQUIPMENT GND-1800FT AMSL.
     01SEP10 0600 - 31AUG11 1200 (ES/1/C1192/10)
+    
+    asdfadf
 
 +   EXTENSIVE MIL AIR ACT EXERCISE NOCO (IFR/VFR) WILL TAKE PLACE
     WI 603745N 0191312E-603809N 0190709E-604803N 0181732E-605626N
@@ -87,6 +89,17 @@ ESAA/FIR SWEDEN
     0194731E-614000N 0193000E-603745N 0191312E. SFC-FL095.
     20SEP10 1232 - 23SEP10 1300 (ES/1/A0533/10)
 
+	AIS AREA INFORMATION ISSUED 100928 1839 SDI126 PAGE 1(6)
+	
+	AIS AREA INFORMATION ISSUED 100928 1839 SDI126 PAGE 1(6)
+	
+	
+AIS AREA INFORMATION ISSUED 100928 1839 SDI126 PAGE 1(6)
+
+	AIS AREA INFORMATION ISSUED 100928 1839 SDI126 PAGE 1(6)
+	
+	
+	
 
                                                CONTINUES ON NEXT PAGE
 
